# RRescue

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  data_check.py  esnli_eval.py  esnli_eval.sh  find_answer_matches.py  find_length_dist.py  find_score_dist.py  find_violation.py  load_for_eval.py  load_for_multidoc_qa.py  multidoc_qa_eval.py  plotting_template.ipynb  requirements.txt  run.sh  sample.py  setup.cfg  setup.sh  train.py  train.sh  train_llama2.sh  train_multidoc_qa.py  train_utils.py  utils.py
RankSFT/: train.py  train.sh  utils.py
SFT/: train.py  train.sh  train_rank.py
data/LM/: format_prompts.py  format_prompts_instr.py  response_gen.py  response_gen_gpt.py  utils.py
data/configs/: esnli_examples.json
data/data_anals/: sent_anls.py
data/post_process/: gen_1k.py  gen_partial.py  process_file.py  scoring_responses.py  test.py  utils.py
data_generation/: alpaca-gen.py  alpaca-rank.py  contexts.json  data_check.py  gen-alpaca.py  gpt-series-flip.py  gpt-series-gen.py  make_data.py  mix-responses.py  multidoc-qa-gen.py  multidoc-qa-rank.py  nohup.out  response_gen.py  response_gen.sh  run_scoring_responses.py  scoring_responses.py  sent_anls.py  sent_check.py  split_files.py  utils.py
data_generation/configs/: esnli_prompt.json  esnli_prompt_with_examples.json  esnli_prompts.py
scripts/: eval_file.py  load_for_eval.py  utils.py
scripts_i/: eval_file.py  load_for_eval.py  load_llama2_for_eval.py  utils.py
scripts_i/llama/: generation.py  model.py  tokenizer.py
