[bdist_wheel]
universal=1

[metadata]
license_files = LICENSE

[pep8]
max-line-length = 120

[flake8]
# note: we ignore all 501s (line too long) anyway as they're taken care of by black
max-line-length = 120
ignore = E203, E402, W503, W504, F821, E501, B, C4, EXE, F401, E266, F841
exclude = watermarks/stable_signature/*
autofix = true
# exclude = attacks/model_utils/*

[isort]
force_sort_within_sections = true
known_third_party = PIL,albumentations,augly,cv2,diffusers,einops,gmpy2,imwatermark,inverse_stable_diffusion,ldm,loss,lpips,main,modified_stable_diffusion,more_itertools,numpy,omegaconf,pandas,pytorch_lightning,requests,scipy,skimage,sklearn,taming,timm,torch,torchvision,tqdm,transformers,tree_ring_utils,utils_img,utils_model,yaml
group_by_package = true
